2010-11-24 Bernhard Kraft  <kraftb@think-open.at>

	* Fixed bug #11052: Incompatibility with TYPO3 4.5

2010-08-06 Bernhard Kraft  <kraftb@think-open.at>

	* Fixed a bug regarding "array_slice" which seems to occur only with some PHP version (thanks to Harald Witt for reporting this bug)
	* Created doxygen documenation for "class.tx_kbnescefe_layout.php"
	* Set "public" and "protected" keywords for methods in "class.tx_kbnescefe_layout.php"
	* Fixed the labels and confirm messages for pasting a content element into content columns or container columns

2010-07-23 Bernhard Kraft  <kraftb@think-open.at>

	* Changed a "width" style for special 4.4.x CSS
	* Uploaded Extensio to TER as 1.1.0
	* Updated documentation

2010-07-08 Bernhard Kraft  <kraftb@think-open.at>

	* Fixed styles issues with 4.4 branch
	* Fixed issues when moving content elements
	* Fixed issues when creating new content elements in branches < 4.3
	* Major rewrite of the tcemain hook class and copy/cut & paste handling
	* Updated documentation
	* Added a feature which allows to include custom CSS files for every BE-Template
	* Added some doxygen documentation

2010-06-29 Bernhard Kraft  <kraftb@think-open.at>

	* Making an Import/Export of kb_nescefe elements or pages with such elements now works properly
	* Now works with new TYPO3 Version 4.4.0

2010-06-23 Bernhard Kraft  <kraftb@think-open.at>

	* kb_nescefe containers can now get properly exported / imported along with all content elements inside them (Sponsored by bluemars.net)

2010-05-10 Bernhard Kraft  <kraftb@think-open.at>

	* Uploaded Extension to TER as 1.0.3

2010-03-24 Bernhard Kraft  <kraftb@think-open.at>

	* Fixed a bug: Double container element header output in FE
	* Fixed a bug: When a page containing content elements got copied and recursiveCopy is active, sub elements were not referenced correctly (THX to Erich Reitmeier and Igor Reitmair for reporting this bug and Igor Reitmeir for sponsoring the extension)
