@@ -1,3 +1,8 @@
+2010-12-27 Bernhard Kraft  <kraftb@think-open.at>
+
+	* Fixed bug #10277: Content elements not localized
+	* Added an option to override "sys_language_contentOL" for elements inside containers
+
 2010-11-24 Bernhard Kraft  <kraftb@think-open.at>
 
 	* Fixed bug #11052: Incompatibility with TYPO3 4.5
